--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 
 //     validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.2'
 
 }
 
