--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -66,12 +66,7 @@ jobs:
         
     # 빌드 결과물을 S3 버킷에 업로드
     - name: Upload to AWS S3
-      run: |
-        aws deploy push \
-          --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
-          --ignore-hidden-files \
-          --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip \
-          --source .
+      run: aws deploy push --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} --ignore-hidden-files --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip --source .
           
     # S3 버킷의 파일을 대상으로 codedeploy 실행
     - name: Deploy to AWS EC2 from S3
